--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,21 @@
-<form action="http://localhost:8000/addprofile" method="post">
-    <input name="profile" type="text">
-    <input type="submit" value="add">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-<form action="http://localhost:8000/rank" method="post">
-    <input name="query" type="text">
-    <input type="submit" value="submit">
-</form>
+    {% include 'includes/nav_bar.html' %}
+    <div class="container">
+        {% block body %}{% endblock %}
+    </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
+</body>
+</html>
