--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,9 @@
 
     {% include 'includes/nav_bar.html' %}
     <div class="container">
-        {% block body %}{% endblock %}
+        {% block body %}
+            
+        {% endblock %}
     </div>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
