--- a/templates/form.html
+++ b/templates/form.html
@@ -3,41 +3,123 @@
 
 {% block body %}
 
+    <div class="container text-center" style="padding: 50px 0px 100px 0px">
+        <div class="container jumbotron">
+            <div class="d-flex flex-row">
+                <div class="p-2">
+                        <form action="http://localhost:8000/addprofile" method="post"  class="form-inline">
+                            <label for="profile">UserName:</label>
+                            <input class="form-control" name="profile" type="text">
+                            <input type="submit" class="btn btn-primary" value="add">
+                        </form>
+                </div>
+                <div class="p-2">
+                        <form action="http://localhost:8000/rank" method="post" class="form-inline">
+                            <label for="query">Query:</label>
+                            <input class="form-control" name="query" type="text">
+                            <input type="submit" value="submit" class="btn btn-primary">
+                        </form>
+                </div>
+            </div>
+        </div>
+    {% if data is defined %}
+      <div>
+            <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Rank</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    
+                    
+                        {% for dict_item in data %}
+                    <tr>
+                        <td>{{dict_item['name']}}</td>
+                        <td>{{dict_item['rank']}}</td>
+                    </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            {% else %}    
+                <h1>Please Enter a query</h1>
+            {% endif %}
+      </div>
+      <div>
+        <select id="sbOne" multiple="multiple">
+            <option value="1">Likes</option>
+            <option value="2">Retweets</option>
+            <option value="3">URL</option>
+            <option value="4">Topic Relevance</option>
+            <option value="5">Hashtags</option>
+        </select>
 
-<div class="form-group container text-center">
-    <form action="http://localhost:8000/addprofile" method="post"  class="form-inline">
-        <label for="profile">UserName:</label>
-        <input class="form-control" name="profile" type="text">
-        <input type="submit" class="btn btn-primary" value="add">
-    </form>
-    <br><br>
-    <form action="http://localhost:8000/rank" method="post" class="form-inline">
-        <label for="query">Query:</label>
-        <input class="form-control" name="query" type="text">
-        <input type="submit" value="submit" class="btn btn-primary">
-    </form>    
-</div>
-{% if data is defined %}
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Rank</th>
-            <th>Name</th>
-        </tr>
-        </thead>
-        <tbody>
+        <select id="sbTwo" multiple="multiple">
+            
+        </select>
         
+        <br />
         
-            {% for dict_item in data %}
-        <tr>
-            <td>{{dict_item['name']}}</td>
-            <td>{{dict_item['rank']}}</td>
-        </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{% else %}    
-    <h1>Please Enter a query</h1>
-{% endif %}
+        <input type="button" id="left" value="<" />
+        <input type="button" id="right" value=">" />
+        <input type="button" id="leftall" value="<<" />
+        <input type="button" id="rightall" value=">>" />
+        <input type="button" value="Submit" id="submit"/>
+      </div>
+        
+    </div>
+    <script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous">
+    </script>
+    <script>
+        $(function () { function moveItems(origin, dest) {
+        $(origin).find(':selected').appendTo(dest);
+        }
+        
+        function moveAllItems(origin, dest) {
+            $(origin).children().appendTo(dest);
+        }
+        
+        $('#left').click(function () {
+            moveItems('#sbTwo', '#sbOne');
+        });
+        
+        $('#right').on('click', function () {
+            moveItems('#sbOne', '#sbTwo');
+        });
+        
+        $('#leftall').on('click', function () {
+            moveAllItems('#sbTwo', '#sbOne');
+        });
+        
+        $('#rightall').on('click', function () {
+            moveAllItems('#sbOne', '#sbTwo');
+        });
+        });
 
+        $('#left').click(function () {
+            moveItems('#sbTwo', '#sbOne');
+        });
+        
+        $('#right').on('click', function () {
+            moveItems('#sbOne', '#sbTwo');
+        });
+        
+        $('#leftall').on('click', function () {
+            moveAllItems('#sbTwo', '#sbOne');
+        });
+        
+        $('#rightall').on('click', function () {
+            moveAllItems('#sbOne', '#sbTwo');
+        });
+        $("#submit").click(() => {
+            for (var i = 0; i < $('select#sbTwo option').length; i++) {
+                console.log($('select#sbTwo option')[i].label)
+            }
+        });
+
+    </script>
 {% endblock %}
