--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    {% block head %}
+    
+    {% endblock %}
 </head>
 <body>
     <script
@@ -14,6 +17,7 @@
         crossorigin="anonymous">
     </script>
     <script src="https://cdn.rawgit.com/mgalante/jquery.redirect/master/jquery.redirect.js"></script>
+
 
     {% include 'includes/nav_bar.html' %}
     <div class="container">
