Add: Insert candidates feature - api

--- a/templates/upload_candidates.html
+++ b/templates/upload_candidates.html
@@ -5,8 +5,9 @@
 <div class="container">
         <h2 class="text-center">Upload a csv file containing name and twitter_handle</h2>
         <br>
-        <form class="form-group jumbotron">
-            <input type="file" class="form-control" name="pic" accept=".csv">
+        <form class="form-group jumbotron" action="http://localhost:8000/addprofile" method="POST"
+        enctype = "multipart/form-data">
+            <input type="file" class="form-control" name="handles" accept=".csv">
             <input type="submit" class="btn btn-primary">
         </form>
     
