--- a/templates/form.html
+++ b/templates/form.html
@@ -30,7 +30,7 @@
 
             <select class="" id="sbTwo" multiple="multiple"></select>
             <br>
-
+3
             <div class="btn-group">
                 <input class="btn btn-secondary" type="button" id="left" value="<" />
                 <input class="btn btn-secondary" type="button" id="right" value=">" />
@@ -40,44 +40,47 @@
             <input class="btn btn-success" id="queryForm" type="button" value="Filter" id="submit" />
         </div>
 
-        <div class="col-sm-9">
-            <h2>Leaderboards</h2>
-            <div class="row">
-                {% for data in final_ranks %}
-                <div class="col-sm-6 table-responsive">
+            <div class="col-sm-9">
+                <h2 class="text-center">Leaderboard</h2>
+                <div class="flex-container">
+                
+                
+                    {% for data in final_ranks %}
+                    
+                    <div class="box">
+                        <!-- <h3 class="query">{{data['query'].capitalize()}}</h3> -->
+                        <table class="table table-striped leaderboard">
+                            <thead>
+                                <tr>
+                                    <th colspan="2">{{data['query'].capitalize()}}</th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
-                    <!-- <h3 class="query">{{data['query'].capitalize()}}</h3> -->
-                    <table class="table table-striped leaderboard">
-                        <thead>
-                            <tr>
-                                <th colspan="2">{{data['query'].capitalize()}}</th>
-                            </tr>
-                        </thead>
-                        <tbody>
 
-
-                            {% for dict_item in data['rank_list'] %}
-                            
-                            <tr>
-                                <td>{{dict_item['rank']}}</td>
-                               
-                                    <td> 
-                                        <a href="/rank/graphs" class="links">
-                                            <img class="profile_image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
-                                                height="50em" width="50em" alt="TEST">{{dict_item['name']}}
-                                        </a>
-                                    </td>
+                                {% for dict_item in data['rank_list'] %}
                                 
+                                <tr>
+                                    <td>{{dict_item['rank']}}</td>
                                 
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                                        <td> 
+                                            <a href="/rank/graphs" class="links">
+                                                <img class="profile_image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
+                                                    height="50em" width="50em" alt="TEST">{{dict_item['name']}}
+                                            </a>
+                                        </td>
+                                    
+                                    
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
 
-                </div>
-                {% endfor %}
+                    </div>
+                    {% endfor %}
+                </div>   
             </div>
-        </div>
+        
     </div>
 
     {% else %}
