Add: addprofile, addtopics endpoints

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,7 +47,7 @@
                 interest.push($('#interest li')[i].innerHTML)
             }
             
-            $.redirect('http://localhost:8000/check', interest);
+            $.redirect('http://localhost:8000/addtopics', interest);
         });
 
         
