--- a/templates/form.html
+++ b/templates/form.html
@@ -61,10 +61,10 @@
                                 {% for dict_item in data['rank_list'] %}
                                 
                                 <tr>
-                                    <td>{{dict_item['rank']}}</td>
+                                    <td>{{loop.index}}</td>
                                 
                                         <td> 
-                                            <a href="/rank/graphs" class="links">
+                                            <a href="/rank/graphs?id={{ dict_item['id'] }}&topic_name={{data['query']}}" class="links">
                                                 <img class="profile_image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
                                                     height="50em" width="50em" alt="TEST">{{dict_item['name']}}
                                             </a>
