--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -4,11 +4,11 @@
 
 {% block body %}
     <div class="container topic_name">
-        <h1 class="text-center">Topic_Name</h1>
+        <h1 class="text-center">{{topic_name}}</h1>
 
         <div class="container alert alert-primary userBox">
             <p> <span><img class="profile_image"src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
-                height="60em" width="60em" alt="TEST"></span> <span style="font-size:2em">Candidate</span></p>
+                height="60em" width="60em" alt="TEST"></span> <span style="font-size:2em">{{name}}</span></p>
         </div>
         <div class="graphs">
             <h3>Time Series of Retweets over time</h3>
