Update: Normalize features and Add: new candidates

--- a/templates/form.html
+++ b/templates/form.html
@@ -65,7 +65,7 @@
                                 
                                         <td> 
                                             <a href="/rank/graphs?id={{ dict_item['id'] }}&topic_name={{data['query']}}" class="links">
-                                                <img class="profile_image" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
+                                                <img class="profile_image" src="{{dict_item['image_url']}}"
                                                     height="50em" width="50em" alt="TEST">{{dict_item['name']}}
                                             </a>
                                         </td>
