--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -7,7 +7,7 @@
         <h1 class="text-center">{{topic_name}}</h1>
 
         <div class="container alert alert-primary userBox">
-            <p> <span><img class="profile_image"src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTF_erFD1SeUnxEpvFjzBCCDxLvf-wlh9ZuPMqi02qGnyyBtPWdE-3KoH3s"
+            <p> <span><img class="profile_image" src="{{image_url}}"
                 height="60em" width="60em" alt="TEST"></span> <span style="font-size:2em">{{name}}</span></p>
         </div>
         <div class="graphs">
