Update: Not include retweets in moi

--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -13,7 +13,7 @@
         <div class="graphs">
             <h3>Time Series of Retweets over time</h3>
             <img src="https://pbs.twimg.com/media/DTK2_qnX0AAYX7q.jpg" alt="tatti">
-            <h3>Time Series of favourite Count over time</h3>
+            <h3>Time Series of favorite Count over time</h3>
             <img src="https://pbs.twimg.com/media/DTK2_qnX0AAYX7q.jpg" alt="tatti">
         </div>
     </div>
