--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -11,11 +11,71 @@
                 height="60em" width="60em" alt="TEST"></span> <span style="font-size:2em">{{name}}</span></p>
         </div>
         <div class="graphs">
-            <h3>Time Series of Retweets over time</h3>
-            <img src="https://pbs.twimg.com/media/DTK2_qnX0AAYX7q.jpg" alt="tatti">
-            <h3>Time Series of favorite Count over time</h3>
-            <img src="https://pbs.twimg.com/media/DTK2_qnX0AAYX7q.jpg" alt="tatti">
+            <canvas id="myChart" width="400" ></canvas>
+            <canvas id="SeriesTweet" width="400" ></canvas>
+            <canvas id="SeriesFav" width="400" ></canvas>
         </div>
+        
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+    
+    <script>
+        var ctx = document.getElementById("myChart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'horizontalBar',
+            data: {
+                labels: [ "Influential Score", "Moi Score" ,"Topic Relevance"],
+                datasets: [{
+                    label: "Candidate",
+                    data: [ {% for key, value in stats.items() %}
+                                {% if key == "node" %}
+
+                                {% else %}
+                                    {{ value }},
+                                {% endif %}
+                            {% endfor %} ],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)'
+                        
+                    ],
+                    borderColor: [
+                        'rgba(255,99,132,1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)'
+                        
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                   
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero:true
+                        }
+                    }]
+                   
+                }
+            }
+        });
+        </script>
+        <script>
+            var ctx = document.getElementById("SeriesTweet").getContext('2d');
+            var myChart = new Chart(ctx, {
+                type: 'line',
+                data: [45,78,36,58,45], 
+                options: {
+                    scales: {
+                        yAxes: [{
+                            stacked: true
+                        }]
+                    }
+                }
+            });
+    </script>
+    
 
 {% endblock %}
